--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/simisettyharshini/Book-Record-Management/issues"
   },
-  "homepage": "https://github.com/simisettyharshini/Book-Record-Management#readme"
+  "homepage": "https://github.com/simisettyharshini/Book-Record-Management#readme",
+  "dependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
